Remove unimplemented pages and use cases from tech task

--- a/techtask/techtask.org
+++ b/techtask/techtask.org
@@ -11,23 +11,10 @@
 *** Получение истории обучения конкретного человека
 Чтобы получить историю обучения пользователя, нужно зайти на его страницу. Если обучающийся
 разрешил отображение своей истории обучения, она будет представлена на этой странице.
-*** Получение списка всех преподавателей
-Чтобы получить список всех преподавателей, нужно авторизоваться в качестве администратора курса,
-зайти на страницу одного из администрируемых курсов, и перейти по ссылке составления расписания.
-На этой странице будет ссылка на страницу со списком всех преподавателей.
-*** Получение списка преподавателей, ведущих данный курс
-Список преподавателей, ведущих курс, приведён на странице курса, на которую можно попасть
-с главной страницы, либо через форму поиска.
-*** Получение расписания преподавателя на заданный интервал времени
+*** Получение расписания преподавателя
 Получить расписание преподавателя можно зайдя на его страницу и нажав соответствующую кнопку.
-*** Получение расписания учащегося на заданный интервал времени
+*** Получение расписания учащегося
 Получить расписание учащегося можно зайдя на его страницу и нажав соответствующую кнопку.
-*** Составление расписания занятий для курса
-Для составления расписания занятий для курса нужно авторизоваться как администратор курса,
-и выбрать курс из администрируемых или создать новый. На странице курса, на которую
-пользователь попадает после этого, есть ссылка на страницу редактирования расписания, с
-помощью которой и составляется расписание. После составления расписания, внесённые изменения
-необходимо сохранить.
 *** Управление данными обучающихся
 Авторизовавшись, обучающийся может редактировать данные о себе, хранимые в системе. Для
 этого на его странице есть кнопка редактирования страницы, добавляющая к полям ФИО, почты,
@@ -45,10 +32,9 @@
 *** Управление курсами
 Авторизовавшись как администратор курса, пользователь может создавать новые курсы по ссылке
 со страницы администратора курса, либо же перейти по ссылкам с этой же страницы к любому из
-администрируемых курсов. На странице курса есть ссылка редактирования расписания курса. На
-странице курса, помимо этого, есть кнопка редактирования описания курса, форма добавления
-новых администраторов со списком уже добавленных, и чекбокс, определяющий, доступен ли курс
-пользователям, отличным от администраторов.
+администрируемых курсов. На странице курса, помимо этого, есть кнопка редактирования описания
+курса, форма добавления новых администраторов со списком уже добавленных, и чекбокс,
+определяющий, доступен ли курс пользователям, отличным от администраторов.
 ** Страницы приложения
 *** Общие положения
 В шапке каждой страницы приведены ссылки на главную страницу и страницу авторизации/выхода.
@@ -61,10 +47,6 @@
 пользователя и кнопка выхода, если пользователь авторизован, и ссылки на страницы авторизации
 и регистрации в противном случае. Большая часть функциональности приложения доступна только
 после авторизации.
-*** Список преподавателей
-На этой странице приведены ссылки на страницы всех преподавателей, зарегистрированных в системе.
-Кроме того, на этой странице есть кнопка поиска преподавателя, которая позволяет отфильтровывать
-список.
 *** Страница обучающегося
 На странице обучающаяся приведено ФИО обучающегося, общая информация о нём, его контактные данные,
 если обучающийся разрешил их отображение, и набор курсов, которые обучающийся проходил или
@@ -96,16 +78,10 @@
 обучающийся, на странице есть также кнопка записи на курс, либо, если он уже записан, кнопка отмены записи.
 Преподавателю, ведущему курс, доступен список ссылок на страницы обучающихся,
 записанных на этот курс.
-Если пользователь авторизован как администратор курса, он может редактировать расписание курса,
-перейдя по соответствующей ссылке. Также есть кнопка редактирования описания курса, при нажатии
+На странице курса есть кнопка редактирования описания курса, доступная только для администраторов курса, при нажатии
 этой кнопки появляется форма для нового описания и кнопка сохранения изменений. Помимо этого, администратор курса
 может назначать и отзывать других администраторов курса(для этого есть форма, куда пишется почта
 добавляемого администратора), и показывать/скрывать курс от других пользователей(чекбокс).
-*** Страница редактирования расписания курса
-На этой странице представлен набор занятий, проводимых во время курса. Можно изменять время
-проведения курса, добавлять или удалять преподавателей, ведущих занятие, добавлять или удалять
-занятия. Добавить преподавателя можно либо выбрав его из списка преподавателей, либо
-посредством поиска. Внизу страницы есть кнопка фиксации изменений.
 *** Страница регистрации
 На странице регистрации можно зарегистрировать учётную запись для обучающегося или преподавателя.
 Учётная запись администратора курса создаётся вручную из соображений безопасности.
@@ -153,11 +129,6 @@
    СтраницаКурса: описание курса
    СтраницаКурса: расписание курса
    СтраницаКурса: запись на курс
-   СтраницаКурса -> СтраницаСоставленияРасписания : Только для администратора
-   СтраницаСоставленияРасписания -> СтраницаКурса
-   СтраницаСоставленияРасписания -> СписокПреподавателей
-   СтраницаСоставленияРасписания: назначение дат занятий
-   СтраницаСоставленияРасписания: назначение преподавателей
    Выход -> Главная
    Главная -> [*]
    #+end_src
