--- a/techtask/techtask.tex
+++ b/techtask/techtask.tex
@@ -1,4 +1,4 @@
-% Created 2020-02-24 Mon 16:13
+% Created 2020-04-21 Tue 15:59
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -33,42 +33,26 @@
 \tableofcontents
 
 \section{Концептуальная модель UI}
-\label{sec:org12254ae}
+\label{sec:orgb12ca78}
 \subsection{Сценарии использования}
-\label{sec:orge230e87}
+\label{sec:org743279b}
 \subsubsection{Получение списков обучающихся по курсам}
-\label{sec:org8f7beba}
+\label{sec:orgdacd7fb}
 Чтобы получить список обучающихся на курсе, нужно авторизоваться как преподаватель и зайти
 на страницу курса, который этот преподаватель ведёт. На этой странице будет список ссылок на
 страницы обучающихся, записанных на курс.
 \subsubsection{Получение истории обучения конкретного человека}
-\label{sec:orgae300a9}
+\label{sec:org18cc026}
 Чтобы получить историю обучения пользователя, нужно зайти на его страницу. Если обучающийся
 разрешил отображение своей истории обучения, она будет представлена на этой странице.
-\subsubsection{Получение списка всех преподавателей}
-\label{sec:org46bf502}
-Чтобы получить список всех преподавателей, нужно авторизоваться в качестве администратора курса,
-зайти на страницу одного из администрируемых курсов, и перейти по ссылке составления расписания.
-На этой странице будет ссылка на страницу со списком всех преподавателей.
-\subsubsection{Получение списка преподавателей, ведущих данный курс}
-\label{sec:org35b184f}
-Список преподавателей, ведущих курс, приведён на странице курса, на которую можно попасть
-с главной страницы, либо через форму поиска.
-\subsubsection{Получение расписания преподавателя на заданный интервал времени}
-\label{sec:orgbb33c16}
+\subsubsection{Получение расписания преподавателя}
+\label{sec:org1b64dbb}
 Получить расписание преподавателя можно зайдя на его страницу и нажав соответствующую кнопку.
-\subsubsection{Получение расписания учащегося на заданный интервал времени}
-\label{sec:org4430b2d}
+\subsubsection{Получение расписания учащегося}
+\label{sec:orgd2d9f67}
 Получить расписание учащегося можно зайдя на его страницу и нажав соответствующую кнопку.
-\subsubsection{Составление расписания занятий для курса}
-\label{sec:org6aa472c}
-Для составления расписания занятий для курса нужно авторизоваться как администратор курса,
-и выбрать курс из администрируемых или создать новый. На странице курса, на которую
-пользователь попадает после этого, есть ссылка на страницу редактирования расписания, с
-помощью которой и составляется расписание. После составления расписания, внесённые изменения
-необходимо сохранить.
 \subsubsection{Управление данными обучающихся}
-\label{sec:org3c82cc7}
+\label{sec:org8978d76}
 Авторизовавшись, обучающийся может редактировать данные о себе, хранимые в системе. Для
 этого на его странице есть кнопка редактирования страницы, добавляющая к полям ФИО, почты,
 биографии и контактов формы для установки новых значений соответствующих полей, и кнопку
@@ -76,7 +60,7 @@
 редактировании данных отображается чекбокс, определяющий, нужно ли показывать данную
 информацию на странице пользователя.
 \subsubsection{Управление данными преподавателей}
-\label{sec:org3a6d622}
+\label{sec:org5500235}
 Авторизовавшись, преподаватель может редактировать данные о себе, хранящиеся в системе. Для
 этого на его странице есть кнопка редактирования страницы, добавляющая к полям ФИО, почты,
 названия компании, биографии и контактов формы для установки новых значений соответствующих
@@ -84,35 +68,29 @@
 редактировании данных отображается чекбокс, определяющий, нужно ли показывать данную
 информацию на странице пользователя.
 \subsubsection{Управление курсами}
-\label{sec:org29f0853}
+\label{sec:org939815a}
 Авторизовавшись как администратор курса, пользователь может создавать новые курсы по ссылке
 со страницы администратора курса, либо же перейти по ссылкам с этой же страницы к любому из
-администрируемых курсов. На странице курса есть ссылка редактирования расписания курса. На
-странице курса, помимо этого, есть кнопка редактирования описания курса, форма добавления
-новых администраторов со списком уже добавленных, и чекбокс, определяющий, доступен ли курс
-пользователям, отличным от администраторов.
+администрируемых курсов. На странице курса, помимо этого, есть кнопка редактирования описания
+курса, форма добавления новых администраторов со списком уже добавленных, и чекбокс,
+определяющий, доступен ли курс пользователям, отличным от администраторов.
 \subsection{Страницы приложения}
-\label{sec:org9dc8f07}
+\label{sec:orgf3ae4c8}
 \subsubsection{Общие положения}
-\label{sec:org3bbeee0}
+\label{sec:orgdcd657f}
 В шапке каждой страницы приведены ссылки на главную страницу и страницу авторизации/выхода.
 При переходе по ссылке на страницу выхода пользователь попадает на ту же страницу, если она
 доступна неавторизованному пользователю, либо на главную.
 \subsubsection{Главная страница}
-\label{sec:org5440ca0}
+\label{sec:org1307922}
 На главной странице приведён список курсов в виде ссылок на них и поле
 поиска курса. В результате поиска на главной будут отображаться только курсы, удовлетворяющие
 условию поиска. Кроме того, на главной странице в шапке приведена ссылка на личную страницу
 пользователя и кнопка выхода, если пользователь авторизован, и ссылки на страницы авторизации
 и регистрации в противном случае. Большая часть функциональности приложения доступна только
 после авторизации.
-\subsubsection{Список преподавателей}
-\label{sec:org50fb82e}
-На этой странице приведены ссылки на страницы всех преподавателей, зарегистрированных в системе.
-Кроме того, на этой странице есть кнопка поиска преподавателя, которая позволяет отфильтровывать
-список.
 \subsubsection{Страница обучающегося}
-\label{sec:org6c1289c}
+\label{sec:org302ff02}
 На странице обучающаяся приведено ФИО обучающегося, общая информация о нём, его контактные данные,
 если обучающийся разрешил их отображение, и набор курсов, которые обучающийся проходил или
 проходит, также если обучающийся разрешил отображение этих данных. Также на странице обучающегося
@@ -123,7 +101,7 @@
 определяющий, нужно ли отображать эти данные на странице. Изменения применяются после нажатия
 кнопки сохранения изменений.
 \subsubsection{Страница преподавателя}
-\label{sec:orgdaab3d9}
+\label{sec:orgc2afee3}
 На странице преподавателя отображается ФИО преподавателя, его контактная информация, если
 включено отображение этой информации, название компании, в которой он работает,
 и ссылки на курсы, занятия в которых он ведёт. Также на странице преподавателя есть кнопка
@@ -134,58 +112,51 @@
 определяющий, нужно ли отображать эти данные на странице. Изменения применяются после нажатия
 кнопки сохранения изменений.
 \subsubsection{Страница администратора курса}
-\label{sec:org3557bf5}
+\label{sec:org22e4fc7}
 На этой странице предоставлен список ссылок на администрируемые пользователем курсы. Кроме
 того, есть ссылка создания курса, с помощью которой создаётся новый курс, на страницу которого
 администратор и попадает. По умолчанию созданный курс не виден никому, кроме администратора.
 \subsubsection{Страница курса}
-\label{sec:orga564a8a}
+\label{sec:org3bc4214}
 На странице курса приведено описание курса, диапазон дат его проведения, его интенсивность,
 расписание и список ссылок на страницы преподавателей, ведущих курс.
 Расписание представлено в виде списка дат и времени проведения занятий. В случае, если пользователь авторизован как
 обучающийся, на странице есть также кнопка записи на курс, либо, если он уже записан, кнопка отмены записи.
 Преподавателю, ведущему курс, доступен список ссылок на страницы обучающихся,
 записанных на этот курс.
-Если пользователь авторизован как администратор курса, он может редактировать расписание курса,
-перейдя по соответствующей ссылке. Также есть кнопка редактирования описания курса, при нажатии
+На странице курса есть кнопка редактирования описания курса, доступная только для администраторов курса, при нажатии
 этой кнопки появляется форма для нового описания и кнопка сохранения изменений. Помимо этого, администратор курса
 может назначать и отзывать других администраторов курса(для этого есть форма, куда пишется почта
 добавляемого администратора), и показывать/скрывать курс от других пользователей(чекбокс).
-\subsubsection{Страница редактирования расписания курса}
-\label{sec:org49123b6}
-На этой странице представлен набор занятий, проводимых во время курса. Можно изменять время
-проведения курса, добавлять или удалять преподавателей, ведущих занятие, добавлять или удалять
-занятия. Добавить преподавателя можно либо выбрав его из списка преподавателей, либо
-посредством поиска. Внизу страницы есть кнопка фиксации изменений.
 \subsubsection{Страница регистрации}
-\label{sec:org3de71c3}
+\label{sec:org6d83269}
 На странице регистрации можно зарегистрировать учётную запись для обучающегося или преподавателя.
 Учётная запись администратора курса создаётся вручную из соображений безопасности.
 Для регистрации обучающегося нужно предоставить электронную почту, логин и пароль, которые
 будут использоваться для входа, ФИО обучающегося и опциональную биографическую информацию,
 преподавателю дополнительно нужно предоставить название компании, в которой он работает.
 \subsubsection{Страница авторизации}
-\label{sec:orgd19dc19}
+\label{sec:org8467e01}
 На странице авторизации можно войти как обучающийся, преподаватель, либо администратор курса.
 Во всех трёх случаях авторизация происходит с помощью логина и пароля. После авторизации как
 обучающийся, преподаватель или администратор курса пользователь попадает на страницу
 обучающегося, преподавателя или администратора курса соответственно.
 \subsection{Схема навигации между страницами}
-\label{sec:org544dab5}
+\label{sec:orgc8e3a86}
 \begin{center}
 \includegraphics[width=.9\linewidth]{pages.png}
 \end{center}
 
 \section{База данных}
-\label{sec:org530ff66}
+\label{sec:orgfedac28}
 \subsection{Схема базы данных}
-\label{sec:org31d714b}
+\label{sec:orgc65331a}
 \begin{center}
 \includegraphics[width=.9\linewidth]{db.png}
 \end{center}
 
 \subsection{Скрипт создания базы данных}
-\label{sec:orgb007b7b}
+\label{sec:org79fa53b}
 \begin{minted}[]{sql}
 CREATE TABLE PUPIL (
   id serial PRIMARY KEY,
@@ -218,7 +189,8 @@ CREATE TABLE ADMINISTRATOR (
 CREATE TABLE COURSE (
   id serial PRIMARY KEY,
   admin_id integer REFERENCES ADMINISTRATOR,
-  description text);
+  description text,
+  is_displayed boolean NOT NULL);
 
 CREATE TABLE LESSON (
   id serial PRIMARY KEY,
@@ -236,9 +208,33 @@ CREATE TABLE PUPIL_COURSE (
   id serial PRIMARY KEY,
   pupil_id integer REFERENCES PUPIL,
   course_id integer REFERENCES COURSE);
+
+CREATE FUNCTION fix_courses() RETURNS TRIGGER AS $fix_courses$
+DECLARE
+        c RECORD;
+        new_admin RECORD;
+    BEGIN
+        FOR c IN
+            SELECT id, description FROM COURSE
+            WHERE COURSE.admin_id = OLD.id
+        LOOP
+            SELECT admin_id INTO new_admin FROM ADMIN_COURSE
+            WHERE ADMIN_COURSE.course_id = course.id
+            AND ADMIN_COURSE.admin_id != OLD.id;
+            IF NOT FOUND THEN
+                RAISE EXCEPTION 'Removing last admin of the course %', c.d;
+            END IF;
+            UPDATE COURSE SET admin_id = new_admin.admin_id WHERE id = c.id;
+        END LOOP;
+        RETURN OLD;
+    END;
+$fix_courses$ LANGUAGE plpgsql;
+
+CREATE TRIGGER fix_courses BEFORE DELETE ON ADMINISTRATOR
+    FOR EACH ROW EXECUTE FUNCTION fix_courses();
 \end{minted}
 \subsection{Скрипт заполнения базы данных}
-\label{sec:org25d2f11}
+\label{sec:orgb4c4811}
 \begin{minted}[]{sql}
 SET DATESTYLE TO "DMY";
 
@@ -263,8 +259,8 @@ INSERT INTO TEACHER(firstname, lastname, company_name, mail, pass_hash, display_
 INSERT INTO ADMINISTRATOR(mail, pass_hash) VALUES('nicolas@nmattia.com', '84eab5c7b4f0530a708350454e7f8ccaecde87cfbb9b1ed005da18685bf6776f');
 INSERT INTO ADMINISTRATOR(mail, pass_hash) VALUES('robert@stuffwithstuff.com', 'c074d9749aa92d447e63edc69932ebf983b863685fe112646e7ae4314641e391');
 
-INSERT INTO COURSE(description, admin_id) VALUES('Java programming', 1);
-INSERT INTO COURSE(description, admin_id) VALUES('Databases', 2);
+INSERT INTO COURSE(description, admin_id, is_displayed) VALUES('Java programming', 1, TRUE);
+INSERT INTO COURSE(description, admin_id, is_displayed) VALUES('Databases', 2, TRUE);
 
 INSERT INTO LESSON(description, lesson_time, course_id, teacher_id) VALUES('Introduction',
 '12-03-2020 16:20:00', 1, 2);
@@ -294,41 +290,24 @@ SELECT * FROM TEACHER;
 \begin{minted}[]{sql}
 SELECT * FROM ADMINISTRATOR;
 \end{minted}
-
-\begin{center}
-\begin{tabular}{rll}
-id & mail & pass\textsubscript{hash}\\
-\hline
-1 & nicolas@nmattia.com & 84eab5c7b4f0530a708350454e7f8ccaecde87cfbb9b1ed005da18685bf6776f\\
-2 & robert@stuffwithstuff.com & c074d9749aa92d447e63edc69932ebf983b863685fe112646e7ae4314641e391\\
-\end{tabular}
-\end{center}
-
 \begin{minted}[]{sql}
 SELECT * FROM COURSE;
 \end{minted}
-
-\begin{center}
-\begin{tabular}{rrl}
-id & admin\textsubscript{id} & description\\
-\hline
-1 & 1 & Java programming\\
-2 & 2 & Databases\\
-\end{tabular}
-\end{center}
-
 \begin{minted}[]{sql}
 SELECT * FROM LESSON;
 \end{minted}
+\subsection{Скрипт очистки базы данных}
+\label{sec:orgca5ea8c}
+\begin{minted}[]{sql}
+DROP TRIGGER fix_courses ON ADMINISTRATOR;
+DROP FUNCTION fix_courses();
 
-\begin{center}
-\begin{tabular}{rllrr}
-id & description & lesson\textsubscript{time} & course\textsubscript{id} & teacher\textsubscript{id}\\
-\hline
-1 & Introduction & 2020-03-12 16:20:00 & 1 & 2\\
-2 & Introduction & 2020-03-14 16:55:00 & 2 & 3\\
-3 & Object-oriented programming & 2020-03-19 16:20:00 & 1 & 4\\
-4 & History of databases & 2020-03-12 16:55:00 & 2 & 4\\
-\end{tabular}
-\end{center}
+DROP TABLE PUPIL_COURSE;
+DROP TABLE ADMIN_COURSE;
+DROP TABLE PUPIL CASCADE;
+DROP TABLE COURSE CASCADE;
+DROP TABLE LESSON CASCADE;
+DROP TABLE TEACHER CASCADE;
+DROP TABLE ADMINISTRATOR CASCADE;
+\end{minted}
 \end{document}
